glibc (2.29-3) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * Upload to experimental.
  * debian/control.in/libc: make libc depends on libcrypt1, libc-dev depends
    on libcrypt1-dev and libc-udeb depends on libcrypt1-udeb.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Oct 2019 22:55:48 +0200

glibc (2.29-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/control.in/main: drop the <!nocheck> profile from the
    python3:native build-depends.  Closes: #939871.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix getegid, geteuid and getppid on alpha with < 5.1 kernels.
      Closes: #939898.

  [ Sven Joachim ]
  * debian/script.in/nsscheck.sh: Do not restart services of different
    architecture than libc.  Closes: #700472.

  [ Samuel Thibault ]
  * patches/hurd-i386/submitted-anon-mmap-shared.diff: Re-disable, actually
    makes some tests fail.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 20 Sep 2019 21:39:03 +0200

glibc (2.29-1) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix math tests on alpha.
  * debian/sysdeps/alpha.mk, debian/control.in/main: do not force build with
    gcc-8.
  * debian/testsuite-xfail-debian.mk: XFAIL narrowing add/sub tests, they
    have always failed since they have been introduced.
  * debian/control.in/libc: add a Breaks: iraf-fitsutil (<< 2018.07.06-4) to
    libc0.1/0.3/6/6.1. See bug#939523.
  * debian/testsuite-xfail-debian.mk: drop XFAILs related to the wrong value
    of (MIN)SIGSTKSZ for 32-bit processes on arm64, now that (old-)stable
    kernels are fixed.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/submitted-anon-mmap-shared.diff: Enable, now that
    hurd 2017 is behind.
  * control: Break old version of hurd package accordingly.
  * debian/patches/hurd-i386/local-exec_filename.diff: Fix glibc 2.26
    _hurd_exec_paths symbol visibility.
