@@ -89,6 +89,7 @@ rtlddir=/lib
 slibdir=/lib/$(DEB_HOST_MULTIARCH)
 libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 mvec = no
+crypt = no
 
 
 BASE_CC = gcc
