@@ -7,10 +7,11 @@ ifeq (,$(filter nobiarch, $(DEB_BUILD_PROFILES)))
 # build 32-bit (n32) alternative library
 GLIBC_PASSES += mipsn32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
+libc6-mipsn32_shlib_dep = libc6-mipsn32 (>= $(shlib_dep_ver))
 mipsn32_configure_target = mipsisa64r6-linux-gnuabin32
 mipsn32_CC = $(CC) -mabi=n32
 mipsn32_CXX = $(CXX) -mabi=n32
-libc6-mipsn32_shlib_dep = libc6-mipsn32 (>= $(shlib_dep_ver))
+mipsn32_crypt = yes
 mipsn32_rtlddir = /lib32
 mipsn32_slibdir = /lib32
 mipsn32_libdir = /usr/lib32
@@ -18,10 +19,11 @@ mipsn32_libdir = /usr/lib32
 # build 64-bit alternative library
 GLIBC_PASSES += mips64
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mips64 libc6-dev-mips64
+libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
 mips64_configure_target = mipsisa64r6-linux-gnuabi64
 mips64_CC = $(CC) -mabi=64
 mips64_CXX = $(CXX) -mabi=64
-libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
+mips64_crypt = yes
 mips64_rtlddir = /lib64
 mips64_slibdir = /lib64
 mips64_libdir = /usr/lib64
