@@ -16,6 +16,7 @@ libc6-sparc_shlib_dep = libc6-sparc (>= $(shlib_dep_ver))
 sparc_configure_target=sparcv9-linux-gnu
 sparc_CC = $(CC) -m32
 sparc_CXX = $(CXX) -m32
+sparc_crypt = yes
 sparc_rtlddir = /lib
 sparc_slibdir = /lib32
 sparc_libdir = /usr/lib32
