@@ -4,6 +4,9 @@ glibc (2.29-3) UNRELEASED; urgency=medium
   * Upload to experimental.
   * debian/control.in/libc: make libc depends on libcrypt1, libc-dev depends
     on libcrypt1-dev and libc-udeb depends on libcrypt1-udeb.
+  * debian/rules, debian/rules.d/build.mk, debian/rules.d/debhelper.mk,
+    debian/sysdeps/amd64.mk: disable libcrypt by passing --disable-crypt
+    except for bi/triarch builds.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Oct 2019 22:55:48 +0200
 
